--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
             </div>
             <div class="finish"></div>
+            <div class="reset">Reset</div>
         </div>
     </div>
 </body>
